New styles added in CSS to fix imgs

--- a/Galeria/index.html
+++ b/Galeria/index.html
@@ -16,10 +16,11 @@
       <h1 class="header__title">Gallery</h1>
     </header>
     <main>
-      <section>
+      <section class="gallery">
         <ul class="gallery__list">
           <li>
             <img
+              class="gallery__image"
               src="./images/horse.jpg"
               alt="running horse in black and white"
               title="running horse"
