Changes in gallery photos to match sizes, CSS modified to make it responsive, updated README file

--- a/Galeria/index.html
+++ b/Galeria/index.html
@@ -26,6 +26,30 @@
               title="running horse"
             />
           </li>
+          <li>
+            <img
+              class="gallery__image"
+              src="./images/cow.jpg"
+              alt="running horse in black and white"
+              title="running horse"
+            />
+          </li>
+          <li>
+            <img
+              class="gallery__image"
+              src="./images/oso.jpg"
+              alt="running horse in black and white"
+              title="running horse"
+            />
+          </li>
+          <li>
+            <img
+              class="gallery__image"
+              src="./images/fox.jpg"
+              alt="running horse in black and white"
+              title="running horse"
+            />
+          </li>
         </ul>
       </section>
     </main>
