index.html updated  with JS classes, new JS file added

--- a/Galeria/index.html
+++ b/Galeria/index.html
@@ -18,8 +18,10 @@
     <main>
       <section class="gallery">
         <div class="gallery__controls">
-          <button class="btn slide_left" title="Previous">&lt;</button>
-          <button class="btn slide_left" title="Next">&gt;</button>
+          <button class="js__prevBtn btn slide_left" title="Previous">
+            &lt;
+          </button>
+          <button class="js__nextBtn btn slide_left" title="Next">&gt;</button>
         </div>
         <ul class="gallery__list">
           <li class="gallery_photoitem spotlight">
