js file modified with buttons code to made them work

--- a/Galeria/index.html
+++ b/Galeria/index.html
@@ -24,7 +24,7 @@
           <button class="js__nextBtn btn slide_left" title="Next">&gt;</button>
         </div>
         <ul class="gallery__list">
-          <li class="gallery_photoitem spotlight">
+          <li class="js__photo gallery_photoitem spotlight">
             <img
               class="gallery__image"
               src="./images/horse.jpg"
@@ -32,7 +32,7 @@
               title="running horse"
             />
           </li>
-          <li class="gallery_photoitem">
+          <li class="js__photo gallery_photoitem">
             <img
               class="gallery__image"
               src="./images/cow.jpg"
@@ -40,7 +40,7 @@
               title="running horse"
             />
           </li>
-          <li class="gallery_photoitem">
+          <li class="js__photo gallery_photoitem">
             <img
               class="gallery__image"
               src="./images/oso.jpg"
@@ -48,7 +48,7 @@
               title="running horse"
             />
           </li>
-          <li class="gallery_photoitem">
+          <li class="js__photo gallery_photoitem">
             <img
               class="gallery__image"
               src="./images/fox.jpg"
@@ -60,5 +60,8 @@
       </section>
     </main>
     <div class="spacer"></div>
+    <script src="./js/main.js"></script>
+
+    </script>
   </body>
 </html>
