New picture added and changes in styles in the gallery CSS file

--- a/Galeria/index.html
+++ b/Galeria/index.html
@@ -24,6 +24,14 @@
           <button class="js__nextBtn btn slide_left" title="Next">&gt;</button>
         </div>
         <ul class="gallery__list">
+          <li class="js__photo gallery_photoitem">
+            <img
+              class="gallery__image"
+              src="./images/cat.jpg"
+              alt="orange resting cat"
+              title="orange cat"
+            />
+          </li>
           <li class="js__photo gallery_photoitem spotlight">
             <img
               class="gallery__image"
@@ -36,26 +44,27 @@
             <img
               class="gallery__image"
               src="./images/cow.jpg"
-              alt="running horse in black and white"
-              title="running horse"
+              alt="brown cow portrait in a green landscape"
+              title="Brow cow"
             />
           </li>
           <li class="js__photo gallery_photoitem">
             <img
               class="gallery__image"
               src="./images/oso.jpg"
-              alt="running horse in black and white"
-              title="running horse"
+              alt="polar bear in the snow saying hi"
+              title="Polar bear"
             />
           </li>
           <li class="js__photo gallery_photoitem">
             <img
               class="gallery__image"
               src="./images/fox.jpg"
-              alt="running horse in black and white"
-              title="running horse"
+              alt="picture of a fox in the wild"
+              title="Fox in the wild"
             />
           </li>
+          
         </ul>
       </section>
     </main>
